# kv-marketplace

./: .gitignore  README.md  pyproject.toml  setup.py
kv_marketplace/: __init__.py  compat.py  prefix_index.py  prefix_index_backend.py  registry.py  registry_backend.py  shared_memory_store.py
kv_marketplace/adapter/: __init__.py  types.py  vllm.py
kv_marketplace/examples/: PROMPT.txt  __init__.py  two_gpu_demo.py  vllm_dual_gpu_demo.py
kv_marketplace/scripts/: compare_kv_dumps.py
kv_marketplace/tests/: __init__.py  conftest.py  test_adapter.py  test_p2p.py  test_prefix_index.py  test_registry.py
kv_marketplace/transport/: __init__.py  p2p.py  p2p_cuda.cpp  setup.py
